implement transaltion in the filter and all expenses screen

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -120,7 +120,11 @@
     "error": "خطأ",
     "success": "نجح",
     "noData": "لا توجد بيانات متاحة",
-    "retry": "إعادة المحاولة"
+    "retry": "إعادة المحاولة",
+    "unknown": "غير معروف",
+    "back": "رجوع",
+    "next": "التالي",
+    "done": "تم"
   },
   "home": {
     "goodMorning": "صباح الخير 👋",
@@ -157,6 +161,27 @@
       "validAmount": "يرجى إدخال مبلغ صحيح أكبر من 0",
       "selectCategory": "يرجى اختيار فئة",
       "selectGroup": "يرجى اختيار مجموعة"
+    },
+    "title": "جميع المصروفات",
+    "loading": "جاري تحميل المصروفات...",
+    "loadingMore": "جاري تحميل المزيد من المصروفات...",
+    "search": {
+      "placeholder": "مثل: \"wifi\""
+    },
+    "empty": {
+      "title": "لا توجد مصروفات بعد",
+      "description": "ابدأ بإضافة أول مصروف لك. تتبع من دفع ماذا وقسمه بعدالة بين أعضاء مجموعتك.",
+      "addFirstExpense": "أضف أول مصروف لك"
+    },
+    "error": {
+      "title": "عذراً! حدث خطأ ما",
+      "tryAgain": "حاول مرة أخرى"
+    },
+    "errors": {
+      "loadFailed": "فشل في تحميل المصروفات"
+    },
+    "pagination": {
+      "showing": "عرض {{start}}-{{end}} من {{total}} مصروف"
     }
   },
   "group": {
@@ -381,6 +406,44 @@
     "validation": {
       "emailRequired": "البريد الإلكتروني مطلوب",
       "emailInvalid": "يرجى إدخال عنوان بريد إلكتروني صحيح"
+    }
+  },
+  "time": {
+    "minutesAgo_one": "منذ {{count}} دقيقة",
+    "minutesAgo_other": "منذ {{count}} دقيقة",
+    "hoursAgo_one": "منذ {{count}} ساعة",
+    "hoursAgo_other": "منذ {{count}} ساعة",
+    "daysAgo_one": "منذ {{count}} يوم",
+    "daysAgo_other": "منذ {{count}} يوم",
+    "yesterday": "أمس",
+    "today": "اليوم",
+    "tomorrow": "غداً"
+  },
+  "filters": {
+    "title": "تصفية",
+    "cancel": "إلغاء",
+    "reset": "إعادة تعيين",
+    "seeExpenses_one": "عرض {{count}} مصروف",
+    "seeExpenses_other": "عرض {{count}} مصروف",
+    "dateRange": {
+      "title": "نطاق التاريخ",
+      "customDate": "تاريخ مخصص"
+    },
+    "dateRanges": {
+      "today": "اليوم",
+      "last7Days": "آخر 7 أيام",
+      "last30Days": "آخر 30 يوماً",
+      "thisMonth": "هذا الشهر"
+    },
+    "categories": {
+      "title": "الفئات"
+    },
+    "amountRange": {
+      "title": "نطاق المبلغ"
+    },
+    "group": {
+      "title": "المجموعة",
+      "selectGroup": "اختر مجموعة"
     }
   }
 }
