fix search button translation

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -423,6 +423,7 @@
     "title": "تصفية",
     "cancel": "إلغاء",
     "reset": "إعادة تعيين",
+    "see": "عرض",
     "seeExpenses_one": "عرض {{count}} مصروف",
     "seeExpenses_other": "عرض {{count}} مصروف",
     "dateRange": {
