fix translation in add expense button

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -115,6 +115,7 @@
     "delete": "حذف",
     "edit": "تعديل",
     "add": "إضافة",
+    "adding": "جاري الإضافة...",
     "search": "بحث",
     "loading": "جاري التحميل...",
     "error": "خطأ",
