--- a/utils/locales/fr/translation.json
+++ b/utils/locales/fr/translation.json
@@ -114,6 +114,7 @@
     "save": "Enregistrer",
     "delete": "Supprimer",
     "edit": "Modifier",
+    "adding": "ajout en cours...",
     "add": "Ajouter",
     "search": "Rechercher",
     "loading": "Chargement...",
