add custom date picker

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -125,7 +125,10 @@
     "unknown": "غير معروف",
     "back": "رجوع",
     "next": "التالي",
-    "done": "تم"
+    "done": "تم",
+    "days": "أيام",
+    "confirm": "تأكيد",
+    "apply": "تطبيق"
   },
   "home": {
     "goodMorning": "صباح الخير 👋",
@@ -430,7 +433,14 @@
     "seeExpenses_other": "عرض {{count}} مصروف",
     "dateRange": {
       "title": "نطاق التاريخ",
-      "customDate": "تاريخ مخصص"
+      "customDate": "تاريخ مخصص",
+      "customDateTitle": "اختر النطاق الزمني",
+      "startDate": "تاريخ البداية",
+      "endDate": "تاريخ النهاية",
+      "selectedRange": "النطاق المحدد",
+      "invalidRange": "يجب أن يكون تاريخ النهاية بعد تاريخ البداية",
+      "selectStartDate": "اختر تاريخ البداية",
+      "selectEndDate": "اختر تاريخ النهاية"
     },
     "dateRanges": {
       "today": "اليوم",
