--- a/utils/locales/en/translation.json
+++ b/utils/locales/en/translation.json
@@ -255,7 +255,13 @@
     "recentExpenses": "Recently Expenses",
     "noExpenses": "No expenses yet",
     "noRecentExpenses": "No expenses yet",
-    "addFirstExpense": "Add the first expense to get started"
+    "addFirstExpense": "Add the first expense to get started",
+    "deleteGroup": "Delete Group",
+    "deleteGroupTitle": "Delete Group?",
+    "deleteGroupMessage": "Are you sure you want to delete this group? This action will permanently remove the group and all its expenses. This cannot be undone.",
+    "groupDeletedSuccess": "Group deleted successfully",
+    "groupDeleteError": "Failed to delete group. Please try again.",
+    "editGroup": "Edit Group"
   },
   "notifications": {
     "notifications": "Notifications",
