add profile navigation and dynamic time-based greetings

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -132,6 +132,9 @@
   },
   "home": {
     "goodMorning": "صباح الخير 👋",
+    "goodAfternoon": "مساء الخير 👋",
+    "goodEvening": "مساء الخير 👋",
+    "goodNight": "تصبح على خير 👋",
     "oweYou": "يدين لك",
     "youOwe": "أنت مدين",
     "monthlyOverview": "نظرة عامة على {{month}} {{year}}",
