Add multi-language support to LogoutModal

--- a/utils/locales/ar/translation.json
+++ b/utils/locales/ar/translation.json
@@ -488,5 +488,12 @@
       "settlementHistory": "تاريخ التسويات",
       "noSettlements": "لا توجد تسويات بعد"
     }
+  },
+  "logoutModal": {
+    "title": "تسجيل الخروج",
+    "message": "هل أنت متأكد من أنك تريد تسجيل الخروج؟",
+    "cancel": "إلغاء",
+    "logout": "تسجيل الخروج",
+    "loggingOut": "جاري تسجيل الخروج..."
   }
 }
